[gd_scene load_steps=8 format=3 uid="uid://c22l3iomktvja"]

[ext_resource type="Script" uid="uid://dqfhergnfa1jx" path="res://transition_manager_finale.gd" id="1_iwv4e"]
[ext_resource type="FontFile" uid="uid://7aadwx1g56cp" path="res://assets/font/Perfect DOS VGA 437 Win.ttf" id="2_he7w2"]

[sub_resource type="Animation" id="Animation_xud6u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/loading:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["loading now"]
}

[sub_resource type="Animation" id="Animation_t501d"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b22fh"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c6mvt"]
resource_name = "loading"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/loading:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["loading now", ".loading now", "..loading now", "...loading now"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6mvt"]
_data = {
&"RESET": SubResource("Animation_xud6u"),
&"fade_in": SubResource("Animation_t501d"),
&"fade_out": SubResource("Animation_b22fh"),
&"loading": SubResource("Animation_c6mvt")
}

[node name="zaddy" type="CanvasLayer"]
script = ExtResource("1_iwv4e")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_right = 0.999868
anchor_bottom = 1.00009
offset_right = 0.151855
offset_bottom = -0.0560303
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="loading" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -154.983
offset_top = -41.0088
offset_right = -24.9829
offset_bottom = -19.0088
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_he7w2")
theme_override_font_sizes/font_size = 21
text = "loading now"

[node name="quote" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.9915
offset_top = -11.0044
offset_right = 86.0085
offset_bottom = 25.9956
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_he7w2")
theme_override_font_sizes/font_size = 16
autowrap_mode = 2

[node name="load_delay" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c6mvt")
}
autoplay = "loading"

[connection signal="timeout" from="load_delay" to="." method="_on_load_delay_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
